[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Terrain/Terrain.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 8, 128, 8 )

[node name="Terrain" type="Spatial" groups=[
"Terrain",
]]
script = ExtResource( 2 )

[node name="LoadOrigin" type="Spatial" parent="."]

[node name="LoadArea" type="Area" parent="LoadOrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 8 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="LoadOrigin/LoadArea"]
shape = SubResource( 1 )

[node name="UnloadTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_exited" from="LoadOrigin/LoadArea" to="." method="_on_LoadArea_body_exited"]
[connection signal="timeout" from="UnloadTimer" to="." method="_on_UnloadTimer_timeout"]
